# chatterm

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  index.html  install.sh  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml  release.yml
capture/: Cargo.toml  README.en.md  README.md
capture/fixtures/: bash-alt-screen.toml  bash-bracketed-paste.toml  bash-cursor-erase.toml  bash-esoterica.toml  bash-mouse.toml  bash-osc.toml  bash-sgr.toml
capture/fixtures/agents/: claude-always-allow.toml  claude-chat.toml  claude-permission-matrix.toml  claude-permission.toml  claude-spinner-enum.toml  claude-tools.toml  claude.toml  codex-basic.toml  codex-chat.toml  codex-long-reply.toml  codex-multi-turn.toml  codex-permission-matrix.toml  codex-permission.toml  kiro-basic.toml  kiro-long-reply.toml  kiro-multi-turn.toml  kiro-permission-matrix.toml  kiro-permission.toml
capture/scripts/: extract_replies.py
capture/src/: analyzer.rs  fixture.rs  main.rs  recorder.rs  report.rs
design/: ChatTerm.html  agent-ansi-stream.md  ai-cli-patterns.md
design/src/: app.jsx  cmdk.jsx  data.jsx  details.jsx  icons.jsx  sidebar.jsx  terminal.jsx  tweaks.jsx
scripts/: chatterm-hook.sh  install-linux.sh  install-remote.sh  setup-hooks.ps1  setup-hooks.sh
src/: App.css  App.tsx  CmdK.tsx  Icons.tsx  Sidebar.tsx  TerminalPane.tsx  XtermPane.tsx  ansi.tsx  persona.ts  themes.ts  types.ts
src-tauri/: Cargo.toml  agents.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_config.rs  lib.rs  main.rs  pty.rs  session.rs  theme.rs  vscreen.rs
src-tauri/tests/: capture_agents.rs
