[package]
name = "capture"
version = "0.1.0"
edition = "2021"
description = "Headless PTY recorder + ANSI coverage analyzer for ChatTerm agent fixtures"

[[bin]]
name = "capture"
path = "src/main.rs"

[dependencies]
portable-pty = "0.8"
vte = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
