[package]
name = "chatterm"
version = "0.1.0"
description = "IM-style Terminal Workspace"
authors = ["you"]
edition = "2021"

[lib]
name = "chatterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
vte = "0.15"
regex = "1"
plist = "1"
libc = "0.2"
