[package]
name = "chatterm"
version = "0.2.3"
description = "IM-style Terminal Workspace"
authors = ["you"]
edition = "2021"

[lib]
name = "chatterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
vte = "0.15"
regex = "1"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    # Named Pipe IPC (hook listener)
    "Win32_System_Pipes", "Win32_System_IO", "Win32_Storage_FileSystem",
    "Win32_Foundation", "Win32_Security",
    # process_cwd: NtQueryInformationProcess + ReadProcessMemory
    "Win32_System_Threading", "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
] }
